[gd_scene load_steps=7 format=3 uid="uid://bmoddjb03cdyt"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_h5vgk"]
[ext_resource type="Shader" path="res://Resources/forground_shader.gdshader" id="2_2db4y"]
[ext_resource type="PackedScene" uid="uid://ccrrclka47lqh" path="res://Models/Characters/granny_base_char.tscn" id="2_4b5e8"]
[ext_resource type="Script" path="res://Scripts/cam_rig.gd" id="2_nipk6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ix654"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_onunf"]
shader = ExtResource("2_2db4y")
shader_parameter/MULTIPLIER = 0.8
shader_parameter/SCALE = 0.4
shader_parameter/SOFTNESS = 0.6
shader_parameter/BASE_OPACITY = 0.9

[node name="Player" type="CharacterBody3D" groups=["Player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_h5vgk")
mouse_sens = 1.0

[node name="AnchorPoint" type="Node3D" parent="."]

[node name="granny_base_char" parent="AnchorPoint" instance=ExtResource("2_4b5e8")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ix654")

[node name="CamOrigin" type="Node3D" parent="."]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CamOrigin"]
transform = Transform3D(1, 0, 0, 0, 0.750111, 0.661312, 0, -0.661312, 0.750111, 0, 0, 0)
spring_length = 10.0
margin = 0.001

[node name="BaseCam" type="Camera3D" parent="CamOrigin/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 5.96046e-08, 0, -1.19209e-07, 1, -3.33786e-06, 0.389479, 11.6554)
script = ExtResource("2_nipk6")

[node name="BackgroundPassContainer" type="SubViewportContainer" parent="CamOrigin/SpringArm3D/BaseCam"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="BackgroundPass" type="SubViewport" parent="CamOrigin/SpringArm3D/BaseCam/BackgroundPassContainer"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="BackgroundCam" type="Camera3D" parent="CamOrigin/SpringArm3D/BaseCam/BackgroundPassContainer/BackgroundPass"]
cull_mask = 1047553

[node name="ForegroundPassContainer" type="SubViewportContainer" parent="CamOrigin/SpringArm3D/BaseCam"]
material = SubResource("ShaderMaterial_onunf")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ForegroundPass" type="SubViewport" parent="CamOrigin/SpringArm3D/BaseCam/ForegroundPassContainer"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="ForegroundCam" type="Camera3D" parent="CamOrigin/SpringArm3D/BaseCam/ForegroundPassContainer/ForegroundPass"]
cull_mask = 1047554
